# merge-issue-number-hook

./: .pre-commit-hooks.yaml  README.md  merge-issue-number.sh  merge_issue_number.py  pyproject.toml
